Fix bottom margin issue that was broken with the move to overlay scrollbars

--- a/App/css/viewer.css
+++ b/App/css/viewer.css
@@ -31,8 +31,8 @@ body {
     -ms-content-zooming: none;
 }
 
-.scrollingElement {
-    margin-bottom: 144px;
+.os-content > div {
+    padding-bottom: 144px;
 }
 
     .scrollingElement > *:not(.articleViewer-manages-own-width),
